# SmartTable

./: README.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  version.txt
firmware/components/esp-etl/include/: etl_profile.h
firmware/main/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  pinconfig.h  smart_table.cpp
firmware/main/certs/: cacert.pem  make_certs.sh  prvtkey.pem
firmware/main/menus/: appbase_menu.cpp  menu_state.cpp  setting_menu.cpp  setting_menu.h  update_menu.cpp  update_menu.h  user_config_menu.cpp  user_config_menu.h  wifi_menu.cpp  wifi_menu.h
firmware/web/smarttable/: package-lock.json  package.json
firmware/web/smarttable/src/: App.css  App.js  index.js
firmware/web/smarttable/src/api/: client.js
firmware/web/smarttable/src/app/: store.js
firmware/web/smarttable/src/features/calibration/: calibrationSlice.js
firmware/web/smarttable/src/features/scan/: scanSlice.js
firmware/web/smarttable/src/features/setting/: settingSlice.js
firmware/web/smarttable/src/features/system/: sysinfo.js
firmware/web/smarttable/src/features/tz/: tzSlice.js
firmware/web/smarttable/src/webpages/: calibration.js  header.js  home.js  index.js  scan.js  scandetails.js  setting.js  systeminfo.js
